// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateButton opens and closes the popover 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownLeft"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        class="euiButton euiButton--primary"
        type="button"
      >
        <span
          class="euiButtonContent euiButtonContent--iconRight euiButton__content"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="euiButton__text"
          >
            Create
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`CreateButton opens and closes the popover 2`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    class="euiPopover euiPopover--anchorDownLeft euiPopover-isOpen"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        class="euiButton euiButton--primary"
        type="button"
      >
        <span
          class="euiButtonContent euiButtonContent--iconRight euiButton__content"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoaded euiButtonContent__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
              fill-rule="non-zero"
            />
          </svg>
          <span
            class="euiButton__text"
          >
            Create
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
